[package]
name = "railers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.0"
egui = "0.26.0"
egui-modal = "0.3.3"
global-hotkey = "0.4.2"
log = "0.4.20"
rdev = "0.5.3"
serde = "1.0.196"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm"
]
